Fix applying css text-align property on textarea widget: - set text alignment on all textarea's paragraphs, not only the current one (aka the one at the current cursor position). - do not set at every setStyle call but only when it has changed (doing the same for lineedit widget).

Also fix annoying behavior where initial content of pre-filled textarea
is showed up all scrolled down to end.

BUG: 302070